feat: init game

--- a/ReversiMvcApp/Views/Game/Details.cshtml
+++ b/ReversiMvcApp/Views/Game/Details.cshtml
@@ -1,4 +1,3 @@
-@using ReversiMvcApp.DTO
 @{
     ViewData["Title"] = "Home";
 }
@@ -8,6 +7,4 @@
 <h4>Game</h4>
 <hr/>
 
-<pre>
-@((Game)ViewData["game"])
-</pre>
+<div id="game"></div>
